--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="card-title"><i class="fa-solid fa-pen-ruler"></i>
                     <h3>UX/UI Design</h3>
                 </div>
-                <p>'m deeply passionate about UI/UX design and have recently completed a comprehensive UI/UX design course on YouTube. This journey has ignited my creative spark and fueled my enthusiasm for crafting intuitive, user-friendly digital experiences</p>
+                <p>I'm deeply passionate about UI/UX design and have recently completed a comprehensive UI/UX design course on YouTube. This journey has ignited my creative spark and fueled my enthusiasm for crafting intuitive, user-friendly digital experiences</p>
             </div>
             <div class="card">
                 <div class="card-title"><i class="fa-solid fa-palette"></i>
