--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2 class="title">About me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="Rohan.jpg" alt="" />
+              <img src="RohanSakhare.png" alt="" />
             </div>
             <div class="column right">
               <div class="text">
