--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="text-2"><span>Ro</span>han<span>Sak</span>hare</div>
             <div class="text-3">And I'm a Computer Engineering Student <span class="typing"></span></div>
             <a href="https://www.linkedin.com/in/rohan-sakhare-22b58a229/" target="_blank"><i class="fab fa-github"></i>Linkedin</a>
+              <a href="https://www.youtube.com/channel/UC-Vq66ruM6HkPskpElpu9-A" target="_blank"><i class="fab fa-github"></i>Youtube</a>
           </div>
         </div>
       </section>
