--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="column right">
               <div class="bars">
                 <div class="info">
-                  <span>C Programming</span>
+                  <span>C++ Programming</span>
                   <span>75%</span>
                 </div>
                 <div class="line html"></div>
