--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="pricing-card-list">
                             <p><a href="https://www.linkedin.com/company/acesdit/">Photographer At Aces Club</a></p>
                             <p><a href="https://www.linkedin.com/company/yuva-maharashtra/">Photographer At Yuva Maharashtra Club</a></p>
-                            <p><a href="https://www.linkedin.com/company/yuva-maharashtra/">Photographer At DEBSOC Club</a></p>
+                            <p><a href="https://www.linkedin.com/company/debsoc-dpu/">Photographer At DEBSOC Club</a></p>
                         </div>
                     </div>
                     <div class="pricing-card-footer">
