--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </div><!-- end of blog wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="ios.png" class="blog-card-img"
+                    <img src="SwiftUI.png" class="blog-card-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
