--- a/index.html
+++ b/index.html
@@ -80,12 +80,16 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        Hello, I am Rohan Sakhare, a computer engineering student at Dr. D.Y. Patil Institute of Technology in Pimpri, Pune.
-                         Originally from Pandharpur, I moved to Pune to pursue my passion for computer science and earned admission through 
-                         the TFWS scheme due to my excellent entrance exam scores. I have a strong interest in iOS development, having completed a
-                          course on 'Hacking with Swift' by Paul Sir, which has enhanced my skills in creating iOS applications. Outside of academics,
-                           I enjoy cycling, trekking, and nature photography, balancing my technical interests with a love for the outdoors. I am excited
-                            to continue growing in iOS development and exploring the intersection of technology and nature.
+                        I am Rohan Avinash Sakhare, a final year Computer Engineering student at 
+                        Dr. D.Y. Patil Institute of Technology, Pimpri, Pune. Passionate about 
+                        programming and problem-solving, I have a strong interest in software and iOS development. 
+                        I completed a three-month internship at VBAI Solution Private Limited in Pune as an
+                        iOS Developer intern, where I gained valuable experience in Swift and SwiftUI.
+                        Currently, I am working on a project to create a platform that connects service 
+                        providers with consumers in urban areas. I am eager to continue growing in the 
+                        field and contributing to innovative solutions.
+
+
                     </p>
                     <a href="https://drive.google.com/file/d/1KZ4xk1syCge4277Jn5pKuict758r_gOF/view?usp=sharing">
                         <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
