--- a/index.html
+++ b/index.html
@@ -401,6 +401,25 @@
                 </div>
             </div><!-- end of blog wrapper -->
 
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="SwiftUI.png" class="blog-card-img"
+                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Getting Started with SwiftUI: A Comprehensive Guide for Beginners</h6>
+                        <p>SwiftUI is Apple’s powerful framework for building user interfaces across all platforms with a declarative syntax, making UI development easier and more intuitive. 
+                            In this blog, we'll cover the essentials to help you kickstart your journey with SwiftUI.
+                        To begin, ensure you have the latest version of Xcode. Create a new project and select "App," ensuring "Use SwiftUI" is checked. Key components of SwiftUI include:
+                            Views: The core building blocks of your UI.
+                            Modifiers: Functions that modify the appearance of views (e.g., .padding()).
+                            Stacks: Containers that arrange views, like VStack and HStack.
+                            SwiftUI allows you to create stunning apps efficiently. Explore more features like animations and data
+                             binding to deepen your understanding. For detailed documentation, visit Apple’s official SwiftUI documentation.
+                            </p>
+                </div>
+            </div><!-- end of blog wrapper -->
+
         </div><!-- end of container -->
     </section><!-- end of blog section -->
 
