--- a/index.html
+++ b/index.html
@@ -403,19 +403,15 @@
 
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="SwiftUI.png" class="blog-card-img"
+                    <img src="swift.png" class="blog-card-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
-                    <h5 class="blog-card-title">Getting Started with SwiftUI: A Comprehensive Guide for Beginners</h6>
-                        <p>SwiftUI is Apple’s powerful framework for building user interfaces across all platforms with a declarative syntax, making UI development easier and more intuitive. 
-                            In this blog, we'll cover the essentials to help you kickstart your journey with SwiftUI.
-                        To begin, ensure you have the latest version of Xcode. Create a new project and select "App," ensuring "Use SwiftUI" is checked. Key components of SwiftUI include:
-                            Views: The core building blocks of your UI.
-                            Modifiers: Functions that modify the appearance of views (e.g., .padding()).
-                            Stacks: Containers that arrange views, like VStack and HStack.
-                            SwiftUI allows you to create stunning apps efficiently. Explore more features like animations and data
-                             binding to deepen your understanding. For detailed documentation, visit Apple’s official SwiftUI documentation.
+                    <h5 class="blog-card-title">Why Swift?</h6>
+                        <p>Swift is a modern programming language, launched in 2014, that's easy to learn and offers practical benefits, 
+                            like earning potential through the App Store. It avoids the complexities of older languages, making coding safer 
+                            and clearer. When building apps, you'll use SwiftUI, Apple's framework that enhances Swift's capabilities for 
+                            creating engaging user interfaces. Overall, Swift is powerful, efficient, and user-friendly—perfect for aspiring developers.
                             </p>
                 </div>
             </div><!-- end of blog wrapper -->
