--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="swift.png" class="blog-card-img"
+                    <img src="Swift.png" class="blog-card-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
