--- a/index.html
+++ b/index.html
@@ -400,6 +400,24 @@
                             </p>
                 </div>
             </div><!-- end of blog wrapper -->
+            </div><!-- end of blog wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="parakram.png" class="blog-card-img"
+                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Parakram 2k25: A Legacy of Excellence Continues!</h6>
+                        <p>The Parakram 25 flash mob kicked off the annual sports event at Dr. D. Y. Patil Institute of Technology, 
+                            Pimpri, Pune with great energy. As the Department Head Coordinator, I’m leading the Computer Department, 
+                            aiming for a third consecutive General Championship with strong support from Prof. Amol Sir, Prof. Bharti 
+                            Ma’am, and my dedicated teammates. Our team includes Pumang (Carrom), Chakradhar (Chess), Anushaka Sao 
+                            (Girls' Head Coordinator), Prakhar & Mayur (Cricket), Shreyash Kohinkar (Kabaddi), Shreyash Kulkarni (Badminton),
+                            Robin & Aryan (Football), Aryan (Basketball), and Kirti Agrawal (Girls' Throwball & Cricket). With teamwork and 
+                            determination, we are ready to win again! #Parakram25 #DYPIT #ChampionsAgain
+                            </p>
+                </div>
+            </div><!-- end of blog wrapper -->
 
             <div class="blog-card">
                 <div class="blog-card-header">
